--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -151,6 +151,10 @@ a:hover
   // &__wrap-title
   &__wrap-description
     padding-bottom: 32px
+  &--bg
+    .section-page__wrap-description
+      padding-top: 25px
+
 .section-title
   &__inner
     margin: 0
@@ -158,6 +162,13 @@ a:hover
     font: 30px $font-root-smbold
     color: #3680be
     text-align: center
+  &--bg
+    background: #5c98ca
+    .section-title__inner
+      color: #fff
+      padding-bottom: 8px
+      padding-top: 8px
+
 
 
 .features
@@ -325,6 +336,21 @@ a:hover
     &--сol3.active
       opacity: 1
       color: #1d857a
+    &--сol4.active
+      color: #fd4141
+      opacity: 1
+    &--col5.active
+      color: #964251
+      opacity: 1
+    &--сol6.active
+      opacity: 1
+      color: #6f35ab
+    &--сol7.active
+      opacity: 1
+      color: #f80058
+    &--сol8.active
+      opacity: 1
+      color: #00d346
 
 
 .grid-sl
