fixed bugs in footer 'read' and slider draggable + select text

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -161,12 +161,15 @@ a:hover {
   .report-info__r {
     color: #fff; }
   .report-info__l {
-    padding-right: 24px; }
+    padding-right: 24px;
+    width: 235px; }
   .report-info__photo {
     margin-bottom: 14px;
     border: 1px solid #fff;
     border-radius: 50%; }
     .report-info__photo img {
+      width: 197px;
+      height: 197px;
       display: block; }
 
 .report-info-name {
