--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -130,11 +130,14 @@ a:hover
     color: #fff
   &__l
     padding-right: 24px
+    width: 235px
   &__photo
     margin-bottom: 14px
     border: 1px solid #fff
     border-radius: 50%
     img
+      width: 197px
+      height: 197px
       display: block
 .report-info-name
   color: #fff
