--- a/app/css/slick.css
+++ b/app/css/slick.css
@@ -6,7 +6,7 @@
     display: block;
     box-sizing: border-box;
 
-    -webkit-user-select: none;
+/*    -webkit-user-select: none;
        -moz-user-select: none;
         -ms-user-select: none;
             user-select: none;
@@ -15,7 +15,7 @@
     -khtml-user-select: none;
     -ms-touch-action: pan-y;
         touch-action: pan-y;
-    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: transparent;*/
 }
 
 .slick-list
@@ -38,7 +38,7 @@
     cursor: hand;
 }
 
-.slick-slider .slick-track,
+/*.slick-slider .slick-track,
 .slick-slider .slick-list
 {
     -webkit-transform: translate3d(0, 0, 0);
@@ -46,7 +46,7 @@
         -ms-transform: translate3d(0, 0, 0);
          -o-transform: translate3d(0, 0, 0);
             transform: translate3d(0, 0, 0);
-}
+}*/
 
 .slick-track
 {
