--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -126,11 +126,13 @@ a:hover
 
 .report-info
   display: flex
+  lex: 1
   &__r
     color: #fff
+    width: 777px
   &__l
     padding-right: 24px
-    width: 235px
+    // width: 235px
   &__photo
     margin-bottom: 14px
     border: 1px solid #fff
