--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -170,9 +170,10 @@ a:hover
   &--bg
     background: #5c98ca
     .section-title__inner
-      color: #fff
       padding-bottom: 8px
       padding-top: 8px
+      color: #fff
+      text-transform: uppercase
 
 
 
@@ -403,13 +404,21 @@ a:hover
     font-size: 16px
     color: #00d346
     font-family: $font-root-smbold
+    text-transform: uppercase
   &--brown
     .sl-item__title
       color: #78432f
+      a
+        color: #78432f
   &--green
     .sl-item__title
       color: #1d857a
+      a
+        color: #1d857a
 
+.sl-item__title a
+  color: #00d346
+  text-decoration: none
 
 
 
@@ -500,5 +509,57 @@ a:hover
 
 .slick-list
   height: 100% !important
+
+.container-inner
+  padding: 0 48px
+.retail
+  padding-top: 16px
+  &__top
+    display: flex
+    padding-bottom: 22px
+  &__l
+    padding-right: 58px
+  &__r
+    width: 252px
+  &-title
+    font-size: 16px
+    text-transform: uppercase
+    font-family: $font-root-smbold
+    &--c1
+      color: #fd4141
+    &--c2
+      color: #964251
+    &--c3
+      color: #7036ac
+    &--c4
+      color: #f80058
+  &__bottom
+    display: flex
+.col-tr
+  width: 262px
+  margin-left: 60px
+  text-align: center
+  &--large
+    width: 262px
+    margin-left: 60px
+  &:first-child
+    margin-left: 0
+  &__numb
+    padding: 4px 0 20px
+    font-size: 35px
+    color: #fd4141
+  &__icon
+    height: 67px
+    display: flex
+    img
+      display: block
+      margin: auto auto
+  &-title--c2
+    color: #964251
+  &-title--c3
+    color: #7036ac
+  &-title--c4
+    color: #f80058
+
 // media
 @import "media"
