--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -525,6 +525,7 @@ a:hover
     font-size: 16px
     text-transform: uppercase
     font-family: $font-root-smbold
+    font-weight: normal
     &--c1
       color: #fd4141
     &--c2
