--- a/app/css/main.css
+++ b/app/css/main.css
@@ -550,7 +550,8 @@ a:hover {
   .retail-title {
     font-size: 16px;
     text-transform: uppercase;
-    font-family: "OpenSansSemiBold", "Arial", sans-serif; }
+    font-family: "OpenSansSemiBold", "Arial", sans-serif;
+    font-weight: normal; }
     .retail-title--c1 {
       color: #fd4141; }
     .retail-title--c2 {
