bg for header menu

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -112,7 +112,7 @@ a:hover {
   border-bottom: 0; }
 
 .sticky.header-page__top {
-  background: #3870b9; }
+  background: #5c98ca; }
 
 .main-nav__list {
   display: -webkit-flex;
