--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -87,7 +87,7 @@ a:hover
 .sticky .header-page__nav-bar
   border-bottom: 0
 .sticky.header-page__top
-  background: #3870b9
+  background: #5c98ca
 .main-nav
   &__list
     @extend %ulli
