new marker for charts

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -726,7 +726,7 @@ a:hover
   &--bar
     padding-top: 40px
 .charts-total
-  text-align: center
+  // text-align: center
   // padding-left: 10px
   &__label
     font-family: $font-root-bold
