--- a/app/css/main.css
+++ b/app/css/main.css
@@ -778,14 +778,14 @@ a:hover {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-justify-content: space-between;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
     padding: 36px 0; }
     .charts__row a {
       color: transparent !important; }
   .charts__col {
-    width: 45%; }
+    width: 50%;
+    padding-left: 30px; }
+    .charts__col:first-child {
+      border-right: 1px solid #ddd; }
 
 .chart-bar .charts__row {
   padding-top: 0; }
